--- a/app/src/main/res/layout/activity_vendor_options.xml
+++ b/app/src/main/res/layout/activity_vendor_options.xml
@@ -63,6 +63,12 @@
             android:layout_height="wrap_content"
             android:text="Employees" />
 
+        <Button
+            android:id="@+id/retqr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Retrieve QR Code" />
+
     </LinearLayout>
 
     <Button
