--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,65 +36,55 @@
             android:orientation="horizontal" />
     </FrameLayout>
 
-    <SearchView
-        android:id="@+id/sv_location"
-        android:layout_width="275dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/rounded_corner"
-        android:iconifiedByDefault="false"
-        android:queryHint="Search"
+    <LinearLayout
+        android:layout_width="405dp"
+        android:layout_height="72dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/menuButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="48dp"
-        android:text="="
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/sv_location"
-        app:layout_constraintEnd_toStartOf="@+id/sv_location"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/sv_location"
-        android:background="@drawable/back_button_raised"/>
+        <Button
+            android:id="@+id/vendorButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/back_button_raised"
+            android:minWidth="48dp"
+            android:text="V" />
 
-    <Button
-        android:id="@+id/locationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="48dip"
-        android:text="+"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/sv_location"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/sv_location"
-        app:layout_constraintTop_toTopOf="@+id/sv_location"
-        android:background="@drawable/back_button_raised"/>
+        <Button
+            android:id="@+id/menuButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/back_button_raised"
+            android:minWidth="48dp"
+            android:text="="
+            android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/vendorButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="48dp"
-        android:text="V"
-        app:layout_constraintStart_toStartOf="@+id/menuButton"
-        app:layout_constraintTop_toBottomOf="@+id/menuButton"
-        android:background="@drawable/back_button_raised"/>
+        <SearchView
+            android:id="@+id/sv_location"
+            android:layout_width="151dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_corner"
+            android:iconifiedByDefault="false"
+            android:queryHint="Search" />
 
-    <Button
-        android:id="@+id/favoritesButton"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:background="@drawable/truck_favorite_pressed"
-        android:minWidth="48dip"
-        app:layout_constraintStart_toStartOf="@+id/locationButton"
-        app:layout_constraintTop_toBottomOf="@+id/locationButton" />
+        <Button
+            android:id="@+id/locationButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/back_button_raised"
+            android:minWidth="48dip"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/favoritesButton"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:background="@drawable/truck_favorite_pressed"
+            android:minWidth="48dp" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
