--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,17 +8,16 @@
     tools:context=".HomeActivityJava">
 
 
+<!--    <androidx.fragment.app.FragmentContainerView-->
+<!--        android:id="@+id/myMap"-->
+<!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
+<!--        class="com.google.android.gms.maps.SupportMapFragment"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-    <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/myMap"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            class="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-    </androidx.fragment.app.FragmentContainerView>
+<!--    </androidx.fragment.app.FragmentContainerView>-->
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -47,58 +46,69 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/frameLayout"></LinearLayout>
 
+
     <LinearLayout
-        android:layout_width="405dp"
-        android:layout_height="72dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:elevation="10dp"
+        android:gravity="center"
         android:orientation="horizontal"
+        android:padding="10dp"
+        android:layout_margin="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/vendorButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/back_button_raised"
-            android:minWidth="48dp"
-            android:text="V" />
-
-        <Button
             android:id="@+id/menuButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:background="@drawable/back_button_raised"
             android:minWidth="48dp"
             android:text="="
             android:textSize="24sp" />
 
+        <Button
+            android:id="@+id/vendorButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            android:background="@drawable/back_button_raised"
+            android:minWidth="48dp"
+            android:text="V" />
+
         <SearchView
             android:id="@+id/sv_location"
-            android:layout_width="151dp"
+            android:layout_width="48dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:background="@drawable/rounded_corner"
             android:iconifiedByDefault="false"
             android:queryHint="Search" />
 
         <Button
+            android:id="@+id/favoritesButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            android:background="@drawable/ic_passion"
+            android:minWidth="48dp" />
+
+        <Button
             android:id="@+id/locationButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:background="@drawable/back_button_raised"
             android:minWidth="48dip"
             android:textSize="24sp" />
 
-        <Button
-            android:id="@+id/favoritesButton"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:background="@drawable/truck_favorite_pressed"
-            android:minWidth="48dp" />
     </LinearLayout>
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
