--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -86,7 +86,7 @@
             android:layout_marginLeft="14dp"
             android:layout_marginRight="14dp"
             android:background="@drawable/ic_search"
-            android:iconifiedByDefault="false"/>
+            android:iconifiedByDefault="true"/>
 
         <Button
             android:id="@+id/favoritesButton"
