--- a/app/src/main/res/layout/home_truck_card.xml
+++ b/app/src/main/res/layout/home_truck_card.xml
@@ -7,14 +7,17 @@
     android:layout_height="wrap_content"
     android:elevation="5dp"
     android:orientation="vertical"
-    android:padding="50dp">
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
+    android:padding="50dp"
+    app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|fill|center_vertical"
-        android:background="@drawable/rounded_corner">
+        >
 
         <ImageView
             android:id="@+id/imageView"
@@ -29,14 +32,6 @@
             app:srcCompat="@mipmap/ic_launcher_round" />
 
         <TextView
-            android:id="@+id/companyNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/truckNameTextView"
-            app:layout_constraintTop_toBottomOf="@+id/truckNameTextView"
-            tools:text="CompanyName" />
-
-        <TextView
             android:id="@+id/truckNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,6 +43,14 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
             tools:text="Truck Name" />
+
+        <TextView
+            android:id="@+id/companyNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/truckNameTextView"
+            app:layout_constraintTop_toBottomOf="@+id/truckNameTextView"
+            tools:text="CompanyName" />
 
         <TextView
             android:id="@+id/hoursTextView"
